chapter5/chapt5_1/log/build_2025-03-06_20-11-24/demo_python_tf/stderr.log
  File "/home/qing/ros2_humble/chapter5/chapt5_1/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf/dynamic_tf_broadcaster.py", line 5
    from tf2_ros.import TransformBroadcaster
                 ^^^^^^
SyntaxError: invalid syntax

